Fix issue with loss of content on small viewheight
Also, margin-top for API-credit element was set to a fixed value

--- a/src/style.css
+++ b/src/style.css
@@ -25,6 +25,7 @@
 
 html {
   height: 100vh;
+  width: 100vw;
 }
 
 body {
@@ -41,11 +42,12 @@ body {
   background-attachment: fixed;
   background-position: center;
   height: 100%;
+  width: 100%;
   font-family: 'Inter', sans-serif;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: safe center;
+  justify-content: safe center;
 }
 
 .container {
@@ -215,7 +217,7 @@ sup {
 }
 
 .weather-api {
-  margin: auto 0 0 auto;
+  margin: 75px 0 0 auto;
 }
 
 .weather-api img {
